api pour lenseignant peut voir les examens des modules quil lenseigne

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
+        "nyholm/psr7": "^1.8",
+        "railsware/mailtrap-php": "^3.9",
+        "symfony/http-client": "^7.4",
+        "symfony/mailer": "^7.4",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
